--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -54,25 +54,25 @@ jobs:
         # These are the OS images that we will run.  self-hosted-linux-arm64 is
         # a self-hosted runner, as mid-2021, GitHub still does not offer arm64
         # VMs.
-        os: ["ubuntu-latest", "macos-latest", "windows-latest", "self-hosted-linux-arm64"]
+        os: ["self-hosted-linux-arm64"]
 
         # Associate additional properties with each of these OS options.
         # Commenting out an OS above is not enough to remove one.  Its section
         # here must also be commented out.
         include:
-          - os: ubuntu-latest
+          # os: ubuntu-latest
             os_name: linux
             target_arch: x64
             exe_ext: ""
-          - os: macos-latest
+          # os: macos-latest
             os_name: osx
             target_arch: x64
             exe_ext: ""
-          - os: windows-latest
+          # os: windows-latest
             os_name: win
             target_arch: x64
             exe_ext: ".exe"
-          - os: self-hosted-linux-arm64
+            os: self-hosted-linux-arm64
             os_name: linux
             target_arch: arm64
             exe_ext: ""
@@ -81,7 +81,7 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           path: repo-src
 
